--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <img src="https://img2.baidu.com/it/u=2336804661,3525967273&fm=253&app=138&f=JPEG?w=800&h=800" alt="Happy" class="photo" style="border-color: #ff6b6b;">
         <div class="success-message">
             <h1>小白大王驾到！</h1>
-            <p>参加小白大王<br>吾皇万岁万岁万万岁。🌹</p>
+            <p>参见小白大王<br>吾皇万岁万岁万万岁。</p>
         </div>
     </div>
 
